# slope

./: CMakeLists.txt
demos/: CMakeLists.txt  animation.c  cos.c  plot_stack.c  simple.c  widgets.c
slope/: figure.c  funcplot.c  view.c  xyaxis.c  xymetrics.c
src/: CMakeLists.txt  chart.c  chart.h  drawing.c  drawing.h  figure.c  figure.h  item.c  item.h  item_p.h  legend.c  legend.h  sampler.c  sampler.h  scale.c  scale.h  slope.h  view.c  view.h  xyaxis.c  xyaxis.h  xyscale.c  xyscale.h  xyseries.c  xyseries.h
src/slope/: axis.c  chart.c  chart.h  figure.c  figure.h  item.c  item.h  legend.c  series.c  widget.c
